@@ -1,6 +1,6 @@
 DIST phonon-backend-vlc-0.2.0.tar.gz 61408 RMD160 b07bdb52723d97012622a67131ef36c8d406e4b9 SHA1 7455ad360d23dcb0cf880ee8e8cbd065ce7146e3 SHA256 5bf393050b1d3af5ef14e29c6a5bc5fae879d078ca26fa17bf17cc0dce394ce9
 DIST phonon-backend-vlc-0.3.1.tar.bz2 61370 RMD160 ad73fa617c94cf1d2896a19c3c8c9fa37ae1ae40 SHA1 b94dddc6f37924c101a8bab7b7a184b7d6b42d96 SHA256 462e0a558f732480769ce0a2f307798a39252e35f4d2b7e57f77dc7cc5a0739c
-EBUILD phonon-vlc-0.2.0.ebuild 1146 RMD160 e7ff1d5e7fb82477db09fc0cc176e7914ed7fbe2 SHA1 33b37938da8fbeb91090a57fad25294ba22c1308 SHA256 e641ed7a047bba4cc16cff7ce16073d063a8b14da61b3687583a710f9de7fc40
-EBUILD phonon-vlc-0.3.1.ebuild 1188 RMD160 b955a7c2279ac59e86a888f657ddee37c9ba8961 SHA1 5d0c40bbc9c1f6abf104e07e36e5344b2e1855f8 SHA256 b2858d0e70b2673f9ad60c97fef736d4254a31606edbdc061a1c0ac86ff93a8c
-MISC ChangeLog 816 RMD160 84498cfaf98ac15323097ad3ab58cbb6938701e2 SHA1 e48285a132c6f947d0c3a674a5a6cf2b97147d0d SHA256 48160f6ed0b283ac845436d7c57019ba7fce06d12c4cca85d8c258f770b317d6
+EBUILD phonon-vlc-0.2.0.ebuild 1152 RMD160 c862d9cc3d02441af4eb4cd4cc82851f574a221d SHA1 99aaf846111e2cd168c34a3da191c0bf9710af09 SHA256 d323673f8554458b580c3002fd870878b642e493dc9c4abbe635160170ac79d4
+EBUILD phonon-vlc-0.3.1.ebuild 1194 RMD160 29d454b2931e65e11cdc4c62a0b8ad95bb0df0dc SHA1 fa9116a3663dab64a712ed3242b2c6c175f4029f SHA256 f0ab4bdf52565173c752521ce19c3877055e1ce82f5acbdfcda115c6dba453fb
+MISC ChangeLog 981 RMD160 367a3039ca53d6629bf6c794c5827a275045cad7 SHA1 94737100660275645f1cf3131eb0496bb3a67ecb SHA256 0d9a95f6a051ea2f52b558674637df8d1efb29a16cea611c26e5a45a925ccbe1
 MISC metadata.xml 158 RMD160 f15477b4ffb8ae0849cbae52329d1bdf99a407f4 SHA1 18cd6cdb98f781c3975c49f300d3f8b1e07333b8 SHA256 b5a2d16139d03b8af578bc87503b14b589dd7e3544d879297ccdb735d35a02e2
