@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/phonon-vlc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/phonon-vlc/ChangeLog,v 1.3 2010/12/04 15:24:56 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/phonon-vlc/ChangeLog,v 1.4 2011/01/06 00:32:07 jmbsvicetto Exp $
+
+  04 Dec 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  phonon-vlc-0.2.0.ebuild, phonon-vlc-0.3.1.ebuild:
+  Added dep on vlc[dbus] - fixes bug 347714.
 
   04 Dec 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   phonon-vlc-0.2.0.ebuild, phonon-vlc-0.3.1.ebuild:
